--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,25 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div id="snackbar">
+            {% for msg in messages %}
+                <p>{{ msg }}</p>
+            {% endfor %}
+            </div>
+            <script>
+                (() => {
+                    const x = document.getElementById("snackbar");
+                    x.className = "show";
+                    setTimeout(() => {
+                        x.className = x.className.replace("show", "");
+                    }, 3000);
+                })();
+            </script>
+        {% endif %}
+    {% endwith %}
+
     <div class="container">
         <div class="entry-list">
             <!-- output loop of all articles here -->
