--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,12 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="static/css/normalize.css">
         <link rel="stylesheet" href="static/css/site.css">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                <link rel="stylesheet" href="static/css/toast.css">
+                {% endif %}
+            {% endwith %}
+
     </head>
     <body>
         <header>
