--- a/templates/new.html
+++ b/templates/new.html
@@ -4,17 +4,17 @@
     <div class="container">
         <div class="new-entry">
             <h2>New Entry</h2>
-            <form>
+            <form action="/entries/new" method="post">
                 <label for="title"> Title</label>
                 <input id="title" type="text" name="title"><br>
                 <label for="date">Date</label>
                 <input id="date" type="date" name="date"><br>
                 <label for="time-spent"> Time Spent</label>
-                <input id="time-spent" type="text" name="timeSpent"><br>
+                <input id="time-spent" type="text" name="time_spent"><br>
                 <label for="what-i-learned">What I Learned</label>
-                <textarea id="what-i-learned" rows="5" name="whatILearned"></textarea>
+                <textarea id="what-i-learned" rows="5" name="what_i_learned"></textarea>
                 <label for="resources-to-remember">Resources to Remember</label>
-                <textarea id="resources-to-remember" rows="5" name="ResourcesToRemember"></textarea>
+                <textarea id="resources-to-remember" rows="5" name="resources_to_remember"></textarea>
                 <input type="submit" value="Publish Entry" class="button">
                 <a href="/" class="button button-secondary">Cancel</a>
             </form>
