--- a/templates/index.html
+++ b/templates/index.html
@@ -22,11 +22,12 @@
 
     <div class="container">
         <div class="entry-list">
-            <!-- output loop of all articles here -->
             {% for article in articles %}
                 <article>
-                    <h2><a href="">{{ article.title }}</a></h2>
-                    <time datetime="2016-01-31">{{ article.date }}</time>
+                    <h2><a href="{{ url_for('details', journal_id=article.id) }}">{{ article.title }}</a></h2>
+                    <time datetime="{{ article.date }}">
+                        {{ article.date|date_format('%B %m, %Y') }}
+                    </time>
                 </article>
             {% endfor %}
         </div>
