--- a/templates/new.html
+++ b/templates/new.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="new-entry">
             <h2>New Entry</h2>
-            <form action="/entries/new" method="post">
+            <form action="{{ url_for('create') }}" method="post">
                 <label for="title"> Title</label>
                 <input id="title" type="text" name="title"><br>
                 <label for="date">Date</label>
@@ -16,7 +16,7 @@
                 <label for="resources-to-remember">Resources to Remember</label>
                 <textarea id="resources-to-remember" rows="5" name="resources_to_remember"></textarea>
                 <input type="submit" value="Publish Entry" class="button">
-                <a href="/" class="button button-secondary">Cancel</a>
+                <a href="{{ url_for('index') }}" class="button button-secondary">Cancel</a>
             </form>
         </div>
     </div>
