--- a/templates/detail.html
+++ b/templates/detail.html
@@ -5,11 +5,11 @@
         <div class="entry-list single">
             <article>
                 <!-- output loop of all articles here -->
-                <h1>The best day I’ve ever had</h1>
-                <time datetime="2016-01-31">January 31, 2016</time>
+                <h1>{{ entry.title }}</h1>
+                <time datetime="{{ entry.date }}">{{ entry.date|date_format('%B %d, %Y') }}</time>
                 <div class="entry">
                     <h3>Time Spent: </h3>
-                    <p>15 Hours</p>
+                    <p>{{ entry.time_spent }}</p>
                 </div>
                 <div class="entry">
                     <h3>What I Learned:</h3>
@@ -29,6 +29,6 @@
         </div>
     </div>
     <div class="edit">
-        <p><a href="{{ url_for('edit', journal_id=journal.id) }}">Edit Entry</a></p>
+        <p><a href="{{ url_for('edit', journal_id=entry.id) }}">Edit Entry</a></p>
     </div>
 {% endblock %}
