--- a/templates/index.html
+++ b/templates/index.html
@@ -22,11 +22,11 @@
 
     <div class="container">
         <div class="entry-list">
-            {% for article in articles %}
+            {% for entry in entries %}
                 <article>
-                    <h2><a href="{{ url_for('details', journal_id=article.id) }}">{{ article.title }}</a></h2>
-                    <time datetime="{{ article.date }}">
-                        {{ article.date|date_format('%B %m, %Y') }}
+                    <h2><a href="{{ url_for('details', journal_id=entry.id) }}">{{ entry.title }}</a></h2>
+                    <time datetime="{{ entry.date }}">
+                        {{ entry.date|date_format('%B %d, %Y') }}
                     </time>
                 </article>
             {% endfor %}
