--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,14 +14,13 @@
                 <link rel="stylesheet" href="/static/css/toast.css">
                 {% endif %}
             {% endwith %}
-
     </head>
     <body>
         <header>
             <div class="container">
                 <div class="site-header">
                     <a class="logo" href="{{ url_for('index') }}"><i class="material-icons">library_books</i></a>
-                    <a class="button icon-right" href="/new"><span>New Entry</span> <i class="material-icons">add</i></a>
+                    <a class="button icon-right" href="{{ url_for('new') }}"><span>New Entry</span> <i class="material-icons">add</i></a>
                 </div>
             </div>
         </header>
