--- a/templates/edit.html
+++ b/templates/edit.html
@@ -10,8 +10,8 @@
                 <input id="title" type="text" name="title" value="{{ entry.title }}"><br>
                 <label for="date">Date</label>
                 <input id="date" type="date" name="date" value="{{ entry.date }}"><br>
-                <label for="time-spent"> Time Spent</label>
-                <input id="time-spent" type="text" name="time_spent" value="{{ entry.time_spent }}"><br>
+                <label for="time-spent"> Time Spent (Minutes, Integer Only!)</label>
+                <input id="time-spent" type="text" pattern="\d*" name="time_spent" value="{{ entry.time_spent }}"><br>
                 <label for="what-i-learned">What I Learned</label>
                 <textarea id="what-i-learned" rows="5" name="what_i_learned">{{ entry.what_i_learned }}</textarea>
                 <label for="resources-to-remember">Resources to Remember</label>
